--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software develper.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Los Angeles, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hiking, Running, Volleyball and Reading.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Full Stack Web Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Raleigh, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To be an integral part of the exciting and evolving world of technology development </p>
     </section>
 
     <footer id="footer">
